# Proyecto-VSCode

./: .gitignore  .gitingestignore  .gitmodules  =0.5.0  AGENTS.md  AGENTS.md.backup  AI_CONTEXT.md  ARCHITECTURE_v2.md  AUDIO_SETUP_MANIFEST.md  DOCKER_AUDIT.md  Dockerfile  INFORME_ALT_FIGURITA.md  INFORME_TECNICO.md  LUCY_SELF_REFLECTION.md  LUCY_WORKFLOW.md  MANIFEST_V1.md  PLAN.md  README.md  boceto_alt_ghost.py  boceto_nucleo.py  check_brain.py  check_devices.py  codigo_fuente.txt  config.yaml  config_ui_dialogs.yaml  continue.config.example.json  continue.config.json  debug_ollama.py  docker-compose.aleph.yml  docker-compose.ray.yml  docker-compose.yml  fix_language.py  fix_onnx_model_v2.py  fix_pipeline_only.sh  fix_pipeline_recording_simple.sh  fix_wakeword_dynamic.sh  force_crop.py  force_ui.py  generate_figurita_loop.py  generate_pure_loop.py  (+38 more)
.venv_lucy_face/: pyvenv.cfg
.venv_web/: pyvenv.cfg
config/: models.example.yaml  providers.example.yaml
docs/: A9_BASELINE.md  ACTIONS.md  AGENTS.md  AGENT_PROGRESS.md  ARCHITECTURE.md  AUDIT_TRAZABILIDAD.md  BROWSER-AGENT.md  CHANGELOG.md  CHATGPT_UI_BRIDGE.md  DATASETS.md  DEPENDENCIES.md  DEPLOY_CHECKLIST.md  ESTADO-GLOBAL-2025-11-15.md  ESTADO-LUCY-VOICE-CORRECCIONES-2025-11-20.md  ESTADO-LUCY-VOICE-F2-2025-11-16.md  ESTADO-LUCY-VOICE-F2-2025-11-20.md  ESTADO-LUCY-VOICE-F3-2025-11-18.md  ESTADO-LUCY-VOICE-F3-2025-11-19-PIPECAT-TEXTO.md  ESTADO-LUCY-VOICE-Y-DESKTOP-2025-12-09.md  ESTADO_LUCY_VOICE_F3_2025-11-28.md  ESTADO_LUCY_VOICE_LIMPIEZA_2025-11-28.md  ESTADO_X11_FILE_AGENT_POSTREBOOT.md  HANDOFF_A10.md  (+36 more)
(+602 files in other folders)
